fix(textarea): not working wrap="off"

--- a/core/src/components/textarea/textarea.scss
+++ b/core/src/components/textarea/textarea.scss
@@ -102,6 +102,10 @@
   }
 }
 
+.native-textarea.wrap-off {
+  white-space: nowrap;
+}
+
 .native-textarea[disabled] {
   opacity: .4;
 }
